--- a/GuidedProject/AppleViewControllers/AppleViewControllers/Base.lproj/Main.storyboard
+++ b/GuidedProject/AppleViewControllers/AppleViewControllers/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AppleViewControllers" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,67 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ODU-Fx-4Xx">
+                                <rect key="frame" x="20" y="20" width="560" height="379"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="379" id="lok-jt-zFK"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="nTo-if-Q35" appends="YES" id="dRW-dd-nEK"/>
+                                </connections>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="aiF-YN-6b4">
+                                <rect key="frame" x="240" y="407" width="121" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWi-kl-mVI">
+                                        <rect key="frame" x="0.0" y="0.0" width="37" height="30"/>
+                                        <state key="normal" title="Email"/>
+                                        <connections>
+                                            <action selector="emailTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EE8-zZ-7Ca"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qMf-N4-KOE">
+                                        <rect key="frame" x="81" y="0.0" width="40" height="30"/>
+                                        <state key="normal" title="Share"/>
+                                        <connections>
+                                            <action selector="shareButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vpI-O3-IIk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrI-KC-eW7">
+                                <rect key="frame" x="217" y="550" width="166" height="30"/>
+                                <state key="normal" title="Get image from browser"/>
+                                <connections>
+                                    <action selector="browserButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q7d-Hl-p0U"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aiF-YN-6b4" firstAttribute="top" secondItem="ODU-Fx-4Xx" secondAttribute="bottom" constant="8" symbolic="YES" id="82i-Mk-typ"/>
+                            <constraint firstItem="ODU-Fx-4Xx" firstAttribute="centerX" secondItem="aiF-YN-6b4" secondAttribute="centerX" id="FbV-P4-4DJ"/>
+                            <constraint firstItem="ODU-Fx-4Xx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ked-FQ-fjm"/>
+                            <constraint firstItem="ODU-Fx-4Xx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kpr-vL-Naz"/>
+                            <constraint firstItem="ODU-Fx-4Xx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="pw7-Kj-dRG"/>
+                            <constraint firstAttribute="bottom" secondItem="hrI-KC-eW7" secondAttribute="bottom" constant="20" symbolic="YES" id="tRa-ax-hGE"/>
+                            <constraint firstItem="aiF-YN-6b4" firstAttribute="centerX" secondItem="hrI-KC-eW7" secondAttribute="centerX" id="wYu-PU-om1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="ODU-Fx-4Xx" id="fYi-q8-cei"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="nTo-if-Q35">
+                    <connections>
+                        <action selector="imageTapped:" destination="BYZ-38-t0r" id="oow-7o-qSb"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="325" y="378"/>
         </scene>
     </scenes>
 </document>
